@@ -26,6 +26,10 @@ the public names in pcre2_convert.c.
 
 8. Added two casts to compile.c and one to match.c to avoid compiler warnings.
 
+9. Added code to pcre2grep when compiled under VMS to set the symbol
+PCRE2GREP_RC to the exit status, because VMS does not distinguish between
+exit(0) and exit(1).
+
 
 Version 10.30 14-August-2017
 ----------------------------
